Java Hints SPI module cleanup
 - records, switch, instanceof
 - removed unused fields and code
 - collections
 - code simplifications
 - java 17 lang level